# Abstract-VM

./: .gitignore  AVM.cpp  CMakeLists.txt  IOperand.h  NotFit.cpp  NotFit.h  NotFitError.cpp  Operand.cpp  Operand.h  Operand.hpp  OperandController.cpp  OperandController.h  Parser.cpp  Parser.h  RunTypeError.cpp  RunTypeError.h  a.out  defined_literals.cpp  main.cpp  main.h
headers/: AVM.h  IOperand.h  NotFitError.h  Operand.hpp  OperandController.h  Parser.h  main.h
simple_tests/: not_valid.txt  valid_test.txt
test_files/: 6_hello.avm
